@@ -1,5 +1,9 @@
 2012-02-28  Kaz Kylheku  <kaz@kylheku.com>
 
+	* debug.c (help, debug): New g command for tweaking log level.
+
+2012-02-28  Kaz Kylheku  <kaz@kylheku.com>
+
 	* debug.c: Missing d command implemented.
 	Condense the output to 8 times the screen width, for more context.
 	Condense the output in vertical mode (when the entire input line
